# baruch-studyrooms

./: .gitignore  pyproject.toml  vercel.json
api/: index.py
backend/: API_README  SERVERLESS_DEPLOYMENT.md  auth.py  main.py  requirements.txt  scheduler.py  serverless_main.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: AuthModal.tsx  Dashboard.tsx  Header.tsx  LandingPage.tsx  LoginForm.tsx  RegisterForm.tsx  UserProfile.tsx
frontend/src/contexts/: AuthContext.tsx
