[project]
name = "baruch-studyrooms"
version = "0.1.0"
description = "Baruch study room booking backend/frontend deployment"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Flask==3.1.1",
  "flask-cors==5.0.0",
  "requests==2.32.3",
  "pymongo==4.13.0",
  "bcrypt==4.3.0",
  "flask-jwt-extended==4.7.1",
  "serverless-wsgi==3.0.3",
  "python-dotenv==1.0.1",
]
